<resources>
    <string name="app_name">manuelroa_20240921</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TransporteApp</string>
    <string name="nav_header_subtitle">Transporte de pasajeros APP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Conductores</string>
    <string name="menu_gallery">Gráfico</string>
    <string name="menu_slideshow">Cámara</string>
    <string name="menu_animation">Animación</string>
    <string name="menu_video">Video</string>
    <string name="imagen_conductor">imagen conductor</string>
</resources>