<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iacc.manuelroa_20240921.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.iacc.manuelroa_20240921.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.iacc.manuelroa_20240921.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_animation"
        android:name="com.iacc.manuelroa_20240921.ui.animacion.AnimacionFragment"
        android:label="@string/menu_animation"
        tools:layout="@layout/animacion_layout" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.iacc.manuelroa_20240921.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/video_layout" />
</navigation>